Implemented all code-review fixes. Key changes: • Recursive Caret equality now handles nested numbers consistently and rejects callables at any depth. • Function references report "Function" consistently through both type and reflection. • Callable arguments retain source spans, giving precise built-in error locations. • Operator spellings, precedence, symbols, and reserved words are centralized in LanguageSyntax.java. • AST child traversal and rebuilding are centralized in AstTraversal.java. • Persistent sequences now use balanced binary chunks; dictionaries use a persistent AVL tree plus insertion-ordered keys. Append, lookup, and update histories no longer rely on linear parent chains. • CLI file and test execution share one implementation. • test.sh builds the distribution once instead of invoking Gradle repeatedly. • Conformance references now verify that test methods and exercised example files actually exist. • Public Caret code fences in the README and web introduction are automatically parsed. • Updated the specification, README, web introduction, conformance matrix, runnable feature tour, expected output, and Caret-native tests.